--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "json-server": "^0.17.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "accepts": "^1.3.8",
     "ansi-align": "^3.0.1",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
     "array-flatten": "^1.1.1",
+    "babel-loader": "^8.2.5",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.20.0",
     "boxen": "^5.1.2",
@@ -55,6 +63,7 @@
     "encodeurl": "^1.0.2",
     "end-of-stream": "^1.4.4",
     "errorhandler": "^1.5.1",
+    "es6-promise": "^4.2.8",
     "escalade": "^3.1.1",
     "escape-goat": "^2.1.1",
     "escape-html": "^1.0.3",
@@ -117,6 +126,7 @@
     "ms": "^2.0.0",
     "nanoid": "^3.3.4",
     "negotiator": "^0.6.3",
+    "nodelist-foreach-polyfill": "^1.2.0",
     "normalize-url": "^4.5.1",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.12.2",
